# mmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mmath.cppm  mmath_eigen.cppm  mmath_matrix.cppm  mmath_vector.cppm
